clang/test/BSC/Negative/Coroutine/AwaitExpr/await-expr-for-cond/await-expr-for-cond.cbs
// RUN: %clang_cc1 -internal-isystem %S/../../../../../../lib/Headers/bsc_include -verify %s

#include "../../async-func-read-opposite.hbs"

async int f(int start) { 
  int result = start;
  for (int i = await read(1); i < start; i++) { // #1
     int a = await read(1);
  }
  return result;
}

// expected-error@#1 {{await expression is not allowed to appear in condition statement of for loop}}

int main() {
  return 0;
}